--- a/src/assets/styles/reset.less
+++ b/src/assets/styles/reset.less
@@ -13,16 +13,16 @@ h4 {
 html,
 body {
   width: 100%;
-  min-height:100%;
+  height:100%;
   font-family: -apple-system, BlinkMacSystemFont,
     "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
     "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
 }
-body {
-  overflow: scroll;
-  -webkit-overflow-scrolling: touch;
-}
+// body {
+//   overflow: scroll;
+//   -webkit-overflow-scrolling: touch;
+// }
 ul,
 ol {
   list-style-type: none;
