--- a/src/components/sapi-button/index.less
+++ b/src/components/sapi-button/index.less
@@ -119,13 +119,13 @@
     border-color: #7a7c83;
   }
 
-  &.sapi-size-s {
+  &.sapi-button-small {
     height: 26px;
     padding-left: 8px;
     padding-right: 8px;
   }
 
-  &.sapi-size-l {
+  &.sapi-button-large {
     height: 40px;
     padding-left: 23px;
     padding-right: 23px;
