--- a/src/examples/sapi-button/index.less
+++ b/src/examples/sapi-button/index.less
@@ -1,6 +1,7 @@
-.sapi-row {
-  display: flex;
+.wrapper {
+  display: grid;
+  grid-gap: 10px 20px;
   width: 550px;
-  justify-content: space-between;
+  grid-template-columns: repeat(auto-fill, 100px);
   margin-bottom: 15px;
 }
