--- a/src/assets/styles/reset.less
+++ b/src/assets/styles/reset.less
@@ -36,3 +36,28 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+/*滚动条样式
+::-webkit-scrollbar 滚动条整体部分，可以设置宽度啥的
+::-webkit-scrollbar-button 滚动条两端的按钮
+::-webkit-scrollbar-track 外层轨道
+::-webkit-scrollbar-track-piece 内层滚动槽
+::-webkit-scrollbar-thumb 滚动的滑块
+::-webkit-scrollbar-corner 边角
+::-webkit-resizer 定义右下角拖动块的样式
+*/
+// ::-webkit-scrollbar {
+//   width: 4px; 
+//   height: 4px;
+//   display: none;
+// }
+// ::-webkit-scrollbar-thumb {
+//   border-radius: 4px;
+//   box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+//   background: rgba(0,0,0,0.2);
+// }
+// ::-webkit-scrollbar-track {
+//   box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+//   border-radius: 4px;
+//   background: rgba(0,0,0,0.1);
+// }
