--- a/src/assets/sapi-fonts/iconfont.css
+++ b/src/assets/sapi-fonts/iconfont.css
@@ -18,6 +18,15 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* Symbol字体样式 */
+.icon {
+  width: 1em;
+  height: 1em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden;
+}
+
 .iconfont {
   font-family: "iconfont" !important;
   font-size: 12px;
