--- a/src/assets/styles/reset.less
+++ b/src/assets/styles/reset.less
@@ -51,18 +51,18 @@ table {
 ::-webkit-scrollbar-corner 边角
 ::-webkit-resizer 定义右下角拖动块的样式
 */
-// ::-webkit-scrollbar {
-//   width: 4px; 
-//   height: 4px;
-//   display: none;
-// }
-// ::-webkit-scrollbar-thumb {
-//   border-radius: 4px;
-//   box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
-//   background: rgba(0,0,0,0.2);
-// }
-// ::-webkit-scrollbar-track {
-//   box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
-//   border-radius: 4px;
-//   background: rgba(0,0,0,0.1);
-// }
+::-webkit-scrollbar {
+  width: 4px; 
+  height: 4px;
+  display: none;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+  background: rgba(0,0,0,0.2);
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+  border-radius: 4px;
+  background: rgba(0,0,0,0.1);
+}
